# sr-order

./: .ghci  shell.nix  sr-order.cabal
src/Data/: AssocList.hs  EnumMap.hs  Order.hs  Order_0.hs  OrderedMap.hs  UList.hs
src/Data/Order/: AssocList.hs  Functions.hs  HasKey.hs  HasMap.hs  IsMap.hs  MapAndList.hs  MapAndVec.hs  Old.hs  One.hs  Order.hs  Ordered.hs  Type.hs
src/Data/Order/Classes/: One.hs  Ordered.hs
src/Data/Order/Instances/: MapAndVector.hs
src/Data/Order/Types/: AssocList.hs
tests/: InsertAt.hs  Main.hs
zzz/: AssocList.hs  Type.hs  UList.hs
