name:               sr-order
version:            1.1.2
cabal-version:      >= 1.10
build-type:         Simple
license:            BSD3
maintainer:         David Fox <dsf@seereason.com>
homepage:           https://github.com/seereason/th-path
bug-reports:        https://github.com/seereason/th-path/issues
stability:          experimental
synopsis:           A data structure to support lists in collaborative software
description:
  A data structure that combines a 'Map' @k@ @v@ with a list of
  @k@, representing the element order.  This means the @[k]@ can be
  reordered without invalidating any @k@ values that might be in use.
  This is useful for collaborative systems where one person might
  reorder a list while another person is modifying one of its
  elements.

library
  hs-source-dirs: src
  ghc-options: -Wall -O
  build-depends:
    assoc-listlike,
    base >= 4.8 && < 5,
    cereal,
    containers,
    data-default,
    lens,
    ListLike,
    pretty,
    safecopy,
    vector
  exposed-modules:
    Data.EnumMap
    Data.Order
  default-language: Haskell2010

  if !impl(ghcjs)
    Build-Depends:
      QuickCheck


test-suite order-tests
  if impl(ghcjs)
    Buildable: False
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  ghc-options: -Wall -O
  hs-source-dirs: tests
  main-is: Main.hs
  build-depends: base, containers, HUnit, sr-order, QuickCheck

source-repository head
  type:     git
  location: git://github.com/seereason/sr-order.git
